# faerrin

./: .env.example  .gitignore  CLAUDE.md  README.md  dagger.json  package.json  tsconfig.base.json
.claude/: session-intent.md  session-plan.md
.dagger/: package.json
.dagger/src/: index.ts
.github/workflows/: birdfeed-release.yml  ci.yml
caster/: README.md
caster/site/: README.md  tsconfig.json
content/Geography/: Helya.md  Palomar.md
content/Org/: Phoenicians.md  Threshold Authority.md
heartwood/: .env.example  CLAUDE.md  README.md
pkg/listener/python/: README.md  clean.py  db.py  pyproject.toml  transcribe.py
pkg/mouth/crates/roller/: Cargo.toml
pkg/mouth/crates/roller/src/: eval.rs  utils.rs
quartz/: astro.config.mjs  package.json
services/speaks/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  new_chars.sql  players.toml
services/speaks/.sqlx/: query-042ea9b2dc3e8a601a30225f63872cdb90eaf3c83fb35a40e86ec2fdbbae9eb2.json  query-1248dd18099dbf69e11153f1f25da7ceae6ea71d2c95fb434eb934f17e1f1771.json  query-17e3bc791dcef74ae46ffed0721e0199c41b2667e59e52cbc8ebb721456b5c31.json  query-2b527f7ebd317cc7441a21dcb50447f2c91be3a92b0191b865f4ca9a88eb0ed3.json  query-5bcc4b238c72f263a02b2a743ccc469aa14eb52fd431c640a75041c5fff0c201.json  query-5ee6a4cde1886468071419427df925c9757ac284e1ea2eec0942d216131e5475.json  query-a4768499c3313fcf642fbf679fe47e881e60ba8f2db154c9dc17645b5a99d015.json  query-b1709a0b16c3f5a6a29bafdf37c7fc1f7a621672278ffddfa5968a1b2cf37519.json  query-c4d3e60d8f2e8e8c6ff24960633fcdb389b0fa33af9c1bf1afc663cf448528bf.json  query-ce3a547965870c87b9cd16a35a8735061a13776890e21a72dcca05702b96b9c0.json  query-f06f5d9c8b3221d9c770e6162eb6853735902e0f4ce457ca9579c38fe131f2b7.json  query-f0efd666a9fcca6fe4c27ed92e1df6425d48a8b4e80ed9d4ebdb85f3633361d8.json
services/speaks/crates/discord/: Cargo.toml
services/speaks/crates/discord/src/: control.rs  env.rs  handler.rs  http.rs  main.rs  seed_info.rs  syncdie.rs  uiua.rs
services/speaks/crates/discord/src/db/: campaign.rs  die.rs  embedding.rs  mod.rs  player.rs
services/speaks/crates/discord/src/db/queries/: delete_embedding_listing.sql  delete_embeddings.sql  get_active_campaign.sql  get_dice_query.sql  get_embedding_listing.sql  get_player_profile.sql  insert_die.sql  insert_embedding_listing.sql  insert_func.sql
services/speaks/crates/roller/src/: ast.rs  die.rs  lib.rs  parser.rs  pratt_parser.rs
services/speaks/deploy/: CUTOVER.md  speaks.service
strider/: CLAUDE.md  README.md  eslint.config.mjs  package.json  playwright.config.ts  vitest.config.ts
(+1610 files in other folders)
