[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Joshua Bassin <josh.r.bassin@gmail.com>"]

[profile.dev]
debug = 0

[workspace.dependencies]
# local crates
chart = { path = "crates/chart" }
discord = { path = "crates/discord" }
roller = { path = "crates/roller" }

# remote crates
chrono = "0.4.41"
color-eyre = "0.6"
eyre = "0.6"

rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde-lexpr = "0.1.2"
serde_json = "1.0.87"
